# advent-of-code-2022

./: .gitignore  LICENSE  README.md
day01/: .cabal-fmt-21423-VW1zVYesSoO4  .cabal-fmt-21423-WNig0bKnKHcl  .cabal-fmt-21423-q3amQDi0fIOg
day01/app/: Main.hs
day01/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day02/: .cabal-fmt-10621-jqhLFYGnkRJc
day02/app/: Main.hs
day02/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day03/: .cabal-fmt-7501-y5h6vYrak1Xe  day03.cabal
day03/app/: Main.hs
day03/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day04/: .cabal-fmt-19670-iJc3vsN3JOBS  day04.cabal
day04/app/: Main.hs
day04/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
day05/: day05.cabal
day05/app/: Main.hs
day06/: day06.cabal
day06/app/: Main.hs
day07/: day07.cabal
day07/app/: Main.hs  Test.hs
day08/: LICENSE  day08.cabal
day08/app/: Main.hs
day09/: day09.cabal
day09/app/: Main.hs
day10/: day10.cabal
day10/app/: Main.hs
