cabal-version:      3.0
name:               day08
version:            0.1.0.0
synopsis:           Day 8 of Advent of Code 2022
-- description:
license:            MIT
license-file:       LICENSE
author:             David Hoerster
maintainer:         david@agileways.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable day08
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    default-language: Haskell2010
